--- a/style.css
+++ b/style.css
@@ -5681,4 +5681,36 @@ a.pagePost:hover {
 .homePostText a {
   color: #0062b8;
 }
+
+/* Styles for DigHT Minor page */
+.dightSubheader {
+  text-align: center;
+}
+
+.centerButton {
+  text-align: center;
+  margin-top: 20px;
+  height: 50px;
+}
+
+.dightButton {
+  background-color: #0062b4; /* Deep blue background */
+  color: white !important; /* White text */
+  text-decoration: none; /* No underline */
+  padding: 10px 20px; /* Top and bottom padding 10px, left and right padding 20px */
+  border-radius: 5px; /* Rounded corners */
+  font-size: 16px; /* Font size */
+  transition: background-color 0.3s; /* Smooth transition for hover effect */
+  display: inline-block;
+  height: 3em;
+}
+
+.dightButtonText {
+  font-weight: bold;
+}
+
+.centerButton br {
+  display: none;
+}
+
 /* FIN! */
